--- a/src/styles/Header.module.css
+++ b/src/styles/Header.module.css
@@ -21,6 +21,9 @@
 }
 
 @media (max-width: 460px) {
+    .header {
+        width: 600px;
+    }
     .header span {
         font-size: 1.2rem;
     }
