--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -65,3 +65,8 @@
         justify-content: center;
     }
 }
+@media (max-width: 450px) {
+    .country-home {
+        width: fit-content;
+    }
+}
